[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/05_tutorial/last_outpost_tutorial_screen1.png" type="Texture2D" id=1]
[ext_resource path="res://scenes/05_tutorial/last_outpost_button_skip.png" type="Texture2D" id=2]
[ext_resource path="res://scenes/05_tutorial/last_outpost_button_skip_hover.png" type="Texture2D" id=3]
[ext_resource path="res://scenes/05_tutorial/TutorialScene.gd" type="Script" id=4]
[ext_resource path="res://scenes/05_tutorial/last_outpost_ui_arrow_right.png" type="Texture2D" id=5]
[ext_resource path="res://scenes/05_tutorial/last_outpost_ui_arrow_left.png" type="Texture2D" id=6]
[ext_resource path="res://scenes/01_start/last_outpost_button_start.png" type="Texture2D" id=7]
[ext_resource path="res://scenes/01_start/last_outpost_button_start_hover.png" type="Texture2D" id=8]
[ext_resource path="res://scenes/05_tutorial/last_outpost_tutorial_screen3.png" type="Texture2D" id=9]
[ext_resource path="res://scenes/05_tutorial/last_outpost_tutorial_screen4.png" type="Texture2D" id=10]
[ext_resource path="res://scenes/05_tutorial/last_outpost_tutorial_screen2.png" type="Texture2D" id=11]

[node name="SceneTutorial" type="Node2D"]
script = ExtResource( 4 )

[node name="Screen1" type="Sprite2D" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 1 )

[node name="Screen2" type="Sprite2D" parent="."]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 11 )

[node name="Screen3" type="Sprite2D" parent="."]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 9 )

[node name="Screen4" type="Sprite2D" parent="."]
visible = false
position = Vector2( 640, 360 )
texture = ExtResource( 10 )

[node name="ButtonSkip" type="TextureButton" parent="."]
offset_left = 1104.0
offset_top = 40.0
offset_right = 1235.0
offset_bottom = 89.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 3 )

[node name="ButtonNext" type="TextureButton" parent="."]
visible = false
offset_left = 1128.0
offset_top = 288.0
offset_right = 1217.0
offset_bottom = 357.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 5 )
texture_focused = ExtResource( 5 )

[node name="ButtonPrevious" type="TextureButton" parent="."]
visible = false
offset_left = 64.0
offset_top = 288.0
offset_right = 153.0
offset_bottom = 357.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 6 )
texture_focused = ExtResource( 6 )

[node name="ButtonStart" type="TextureButton" parent="."]
visible = false
offset_left = 1000.0
offset_top = 32.0
offset_right = 1247.0
offset_bottom = 110.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 7 )
texture_focused = ExtResource( 8 )

[connection signal="pressed" from="ButtonSkip" to="." method="_on_ButtonSkip_pressed"]
[connection signal="pressed" from="ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="ButtonPrevious" to="." method="_on_ButtonPrevious_pressed"]
[connection signal="pressed" from="ButtonStart" to="." method="_on_ButtonStart_pressed"]
